# webshare-proxy-gen

./: .gitignore  1proxies.json  README.md  app.txt  captcha_token.txt  debug.html  gui.py  harvester.py  main.py  proxies.json  proxy_checker.py  pyproject.toml  recaptcha.py  recaptcha_solver.py  requirements.txt  tester.py  testing.py  valid_proxies.json
human_interaction/: __init__.py  core.py  human_keyboard_type.py  human_mouse_move.py  key_distance.py
