[project]
name = "webshare-proxy-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx==0.27.2",
    "numpy==2.2",
    "openai-whisper>=20250625",
    "playwright>=1.53.0",
    "playwright-stealth>=2.0.0",
    "psutil>=7.0.0",
    "pywin32>=310",
    "scipy>=1.16.0",
]
