[project]
name = "webshare-proxy-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.14",
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "numpy>=2.3.1",
    "playwright>=1.53.0",
    "psutil>=7.0.0",
    "pywin32>=310",
    "scipy>=1.16.0",
]
